--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://www.elsabonnaud.fr"
+baseURL = "https://elsabonnaud.fr"
 languageCode = "en-us"
 title = "Elsa Bonnaud"
 theme = "elsa"
